tg-7525 [BD] Actualizar 'especialidades' por 'servicios' a sector_organitazion

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -349,3 +349,14 @@ databaseChangeLog:
               referencedColumnNames: id
               referencedTableName: users
               validate: true
+              
+    - changeSet:
+        id: modifying-sector_organization-data
+        comment: Actualizacion de datos sector_organization
+        author: mvenere
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE sector_organization SET description = 'Servicios' WHERE id=1;
+    
