tg-7510 [BD] Agregar columna con conexion anterior

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -316,3 +316,14 @@ databaseChangeLog:
                 SET sector_type_id = 6 
                 WHERE sector_type_id IS NULL;
 
+
+    - changeSet:
+        id: add-column-previous_login-users
+        author: flizalde
+        changes:
+          - addColumn:
+              tableName: users
+              columns:
+                - column:
+                    name: previous_login
+                    type: datetime
