--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -114,3 +114,28 @@ databaseChangeLog:
                   (SELECT *
                    FROM sector AS s
                    WHERE s.sector_id IS NULL)
+
+    - changeSet:
+        id: remove-invalid-sector-parent
+        comment: Actualiza el unico padre invalido de la base de datos
+        author: mmalyvarni
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE sector SET sector_id = NULL WHERE id = 604;
+
+    - changeSet:
+        id: addForeignKeyConstraint-sector-sector-id
+        comment: Crea la clave extranjera que referencia el sector_id con el id del sector
+        author: mmalyvarni
+        changes:
+          - addForeignKeyConstraint:
+              baseColumnNames: sector_id
+              baseTableName: sector
+              constraintName: FK_sector_sector_id
+              onDelete: NO ACTION
+              onUpdate: NO ACTION
+              referencedColumnNames: id
+              referencedTableName: sector
+              validate: true
