tg-7584 [BE] Agregar caso de uso de activación de 2FA para usuario

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -65,3 +65,6 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.starttls.required=false
 
 #logging.level.ar.lamansys.sgx.shared.restclient=DEBUG
+
+
+auth.2fa.password=2fa-password
