Comienza desarrollo de 1.40

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -198,3 +198,7 @@ databaseChangeLog:
 
 
 # Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
+
+- include:
+    file: incrementales-v1_40.yml
+    relativeToChangelogFile: true
