--- a/back-end/sgx-mqtt/pom.xml
+++ b/back-end/sgx-mqtt/pom.xml
@@ -27,6 +27,13 @@
     </properties>
 
     <dependencies>
+
+		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>sgx-shared</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -44,11 +51,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.eclipse.paho</groupId>
-            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-            <version>1.2.5</version>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-mqtt</artifactId>
+			<version>5.5.11</version>
+		</dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
