tg-7636 Formateo y actualizaciones

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -5,4 +5,7 @@ LABEL org.opencontainers.image.authors="desarrollo@lamansys.com.ar"
 WORKDIR /app
 COPY app/target/app*.jar /app/app.jar
 
+ENV SERVER_PORT=80
+EXPOSE 80
+
 ENTRYPOINT ["java","-jar","/app/app.jar"]
