--- a/back-end/sgx-shared/pom.xml
+++ b/back-end/sgx-shared/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
-		<lombok.version>1.18.10</lombok.version>
+		<lombok.version>1.18.22</lombok.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<springdoc-openapi.version>1.6.3</springdoc-openapi.version>
 		<jacoco-plugin.version>0.8.2</jacoco-plugin.version>
@@ -167,12 +167,12 @@
 		<dependency>
 			<groupId>org.togglz</groupId>
 			<artifactId>togglz-spring-boot-starter</artifactId>
-			<version>2.6.1.Final</version>
+			<version>3.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.togglz</groupId>
 			<artifactId>togglz-spring-security</artifactId>
-			<version>2.6.1.Final</version>
+			<version>3.2.0</version>
 		</dependency>
 
 		<dependency>
