--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-admin": "^3.19.6",
     "react-dom": "^17.0.2",
