tg-7751. [BE] Cambios container desarrollo

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -64,5 +64,8 @@ spring.mail.properties.mail.smtp.starttls.required=false
 
 #logging.level.ar.lamansys.sgx.shared.restclient=DEBUG
 
+mqtt.client_username=HSI
+mqtt.client_password=hsiPassword
+
 
 auth.2fa.password=2fa-password
