--- a/back-end/sgx-mqtt/src/main/resources/sgx-mqtt.properties
+++ b/back-end/sgx-mqtt/src/main/resources/sgx-mqtt.properties
@@ -1,4 +1,4 @@
-mqtt.server_address=${MQTT_SERVER_ADDRESS:tcp://127.0.0.1:9001}
+mqtt.server_address=${MQTT_SERVER_ADDRESS:tcp://127.0.0.1:1883}
 mqtt.client_connection=${MQTT_CLIENT_CONNECTION:false}
-mqtt.client_username=${MQTT_CLIENT_USERNAME:username}
-mqtt.client_password=${MQTT_CLIENT_PASSWORD:password}
+mqtt.client_username=${MQTT_CLIENT_USERNAME:}
+mqtt.client_password=${MQTT_CLIENT_PASSWORD:}
