--- a/ci/mosquitto/mosquitto.conf
+++ b/ci/mosquitto/mosquitto.conf
@@ -1,10 +1,13 @@
-listener 9001
+listener 1883
 protocol mqtt
+listener 9001
+protocol websockets
 persistence true
 persistence_location /mosquitto/data/
 
 plugin /usr/lib/mosquitto_dynamic_security.so
-plugin_opt_config_file /mosquitto/data/dynamic-security.json
+plugin_opt_config_file /mosquitto/config/dynamic-security.json
+
 
 
 # Config file for mosquitto
