tg-7636 Formateo de código

--- a/back-end/booking/pom.xml
+++ b/back-end/booking/pom.xml
@@ -36,7 +36,11 @@
 			<artifactId>hospital-shared</artifactId>
 			<version>${revision}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
