tg-7799 [DB] Crea tabla para persistir el path en el que se almacena el archivo de definicion de un plugin

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_40.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_40.yml
@@ -1,6 +1,31 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_40
 
+    - changeSet:
+        id: extension_definition_path-createTable
+        comment: Create table extension_definition_path
+        author: jlardapide
+        changes:
+          - createTable:
+              tableName: extension_definition_path
+              columns:
+                - column:
+                    constraints:
+                      nullable: false
+                    name: id
+                    autoIncrement: true
+                    type: smallint
+                - column:
+                    constraints:
+                      nullable: false
+                    name: path
+                    type: varchar
+                - column:
+                    constraints:
+                      nullable: false
+                    name: name
+                    type: varchar
+
 
     - changeSet:
         id: 1.40.0-1
