tg-7807 Agregar cambios de notificaciones branch tg-7455

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -69,3 +69,19 @@ mqtt.client_password=hsiPassword
 
 
 auth.2fa.password=2fa-password
+
+#spring.mail.debug=true
+spring.mail.host=wo45.wiroos.host
+spring.mail.username=dev@kache.ar
+spring.mail.password=r.AhDO1KPvc
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.port=465
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+app.env.domain=http://localhost:4200
+
+app.notification.mail.from=dev@kache.ar
+app.notification.mail.fromFullname=Soma HSI
